Solving bug with icon hover where text overflowed

--- a/public/css/styleMain.css
+++ b/public/css/styleMain.css
@@ -48,6 +48,12 @@
     font-weight: 700;
 }
 
+.sidebar-mini:not(.sidebar-mini-expand-feature).sidebar-collapse .sidebar-menu>li:hover>a>span:not(.pull-right){
+    width: auto;
+    min-width: 180px;
+    padding-right: 20px;
+}
+
 /* Footer */
 
 .main-footer {
